syntax = "proto3";


// export PATH="$PATH:$(go env GOPATH)/bin"
// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto  
option go_package = "./;delivery";

import "google/protobuf/empty.proto";

package delivery;

message FullUser {
  string Email = 1;
  string Login = 2;
  string PhoneNumber = 3;
  string SecondeName = 4;
  string FirstName = 5;
  string Patronimic = 6;
  string Password = 7;
  string PasswordCheck = 8;
  string Avatar = 9;
}

message BaseUser {
  string PhoneNumber = 1;
  string SecondeName = 2;
  string FirstName = 3;
  string Patronimic = 4;
  string Avatar = 5;
}


message UUID {
  string UUID = 1;
}

// grpc-сервис пользователя
service User {
    rpc Create (FullUser) returns (google.protobuf.Empty) {}
    rpc Update (FullUser) returns (google.protobuf.Empty) {}
    rpc Delete (FullUser) returns (google.protobuf.Empty) {}
    rpc Get (UUID) returns (BaseUser) {}
}
